Fix crash in TextEdit when changing text content.

Verify the text cursor is not before attempting to deference the
layout it refers to.

Task-number: QTBUG-25389
Change-Id: I8a75393c5af9f81821ad91cbfdd7bbca0d84b1a2
Reviewed-by: Yann Bodson <yann.bodson@nokia.com>